Only allow Vector API on Java 25+, avoid no such field errors